--- a/style.css
+++ b/style.css
@@ -52,6 +52,27 @@ body::before {
     opacity: 1;
 }
 
+.arrow:focus {
+    outline: 0;
+}
+
 .arrow {
-    position: fixed
+    position: fixed;
+    background-color: transparent;
+    padding: 20px;
+    font-size: 30px;
+    border: 2px solid orange;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    cursor: pointer;
+   
+}
+
+.left-arrow {
+    left: calc(15vw - 65px)
+}
+
+.right-arrow {
+    right: calc(15vw - 65px)
 }
