--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
-    background-image: url('https://images.unsplash.com/photo-1570641963303-92ce4845ed4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80');
+    background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     transition: 0.4s;
