--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
     transition: 0.4s;
+    background-position:cover
 }
 
 body::before {
@@ -37,8 +37,8 @@ body::before {
 
 .slide { 
     opacity: 0;
-    height: 50vh;
-    width: 50vw;
+    height: 70vh;
+    width: 70vw;
     background-position: center center;
     background-size: cover;
     position: absolute;
